
 *** anything may still change during development of this version,
     including incompatible changes ***

* New GnuCOBOL features

** file handling: added backends for ODBC and OCI, along with new directory
   COB_SCHEMA_DIR containing the necessary internal schema files to match the
   indexed file definition to the database table

* internal change: fileio splitted

* The old OpenCOBOL EXTFH interface built in via --with-seqra-extfh 
*     and --with-index-extfh is obsolete and will be removed in the
*     next major release

* many internal changes, changing some defaults (TODO: list in detail)


 GnuCOBOL 3.1-final to be released (in Aug-Sept 2020)
 
 GnuCOBOL 3.1-rc1 to be released (in June 2020)

* New GnuCOBOL features

** XML GENERATE statement
   (note: runtime support needs additional library libxml2)

** JSON GENERATE statement
   (note: runtime support needs additional library cJSON or json-c)
   
** CONTINUE AFTER statement (COBOL 202x) implemented, also handle fractions
   of seconds in C$SLEEP now
   
** TYPEDEF and SAME AS (COBOL 2002) implemented, including the MicroFocus
   and RM/COBOL variants

** Improved support for different compiler extensions (ACUCOBOL, IBM,
   Fujitsu, MicroFocus COBOL, Microsoft COBOL, RM/COBOL, CA Realia and more)

** file handling: include support for a callable EXTFH interface also provided
   by several compilers including Micro Focus
   This allows users to insert an external file handler while retaining
   all of the normal COBOL I/O functions with a possible callback to libcob.
   To have the compiled program call `yourfh()` for file I/O use:
   `cobc -fcallfh=yourfh`
   In turn `yourfh()` may call `EXTFH()` to use I/O functions from GnuCOBOL.
   The external file handler can also be directly invoked from COBOL, too,
   using `CALL "EXTFH"`.
   ** Note: Not each flag contained in the FCD3 is handled already **

** file handling: added support for [RE]WRITE FILE file FROM source
   