@@ -1,4 +1,4 @@
-## Copyright (C) 2003-2012, 2014-2015, 2017-2019 Free Software Foundation, Inc.
+## Copyright (C) 2003-2012, 2014-2015, 2017-2020 Free Software Foundation, Inc.
 ## Written by Keisuke Nishida, Roger While, Simon Sobisch
 ##
 ## This file is part of GnuCOBOL.
@@ -136,6 +136,11 @@ AT_CHECK([$COBCRUN_DIRECT ./prog], [1], [],
 [libcob: prog.cob:9: error: offset of 'X' out of bounds: 5, maximum: 4
 ])
 
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [1], [],
+[libcob: prog.cob:9: error: offset of 'X' out of bounds: 5, maximum: 4
+])
+
 AT_DATA([prog2.cob], [
        IDENTIFICATION   DIVISION.
        PROGRAM-ID.      prog2.
@@ -147,11 +152,6 @@ AT_DATA([prog2.cob], [
            DISPLAY X(I:1) NO ADVANCING
            END-DISPLAY.
            STOP RUN.
-])
-
-AT_CHECK([$COMPILE prog.cob], [0], [], [])
-AT_CHECK([$COBCRUN_DIRECT ./prog], [1], [],
-[libcob: prog.cob:9: error: offset of 'X' out of bounds: 5, maximum: 4
 ])
 
 AT_CHECK([$COMPILE prog2.cob], [0], [], [])
@@ -202,6 +202,11 @@ AT_DATA([prog.cob], [
            STOP RUN.
 ])
 
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [1], [],
+[libcob: prog.cob:9: error: length of 'X' out of bounds: 5, maximum: 4
+])
+
 AT_DATA([prog2.cob], [
        IDENTIFICATION   DIVISION.
        PROGRAM-ID.      prog2.
@@ -215,11 +220,6 @@ AT_DATA([prog2.cob], [
            STOP RUN.
 ])
 
-AT_CHECK([$COMPILE prog.cob], [0], [], [])
-AT_CHECK([$COBCRUN_DIRECT ./prog], [1], [],
-[libcob: prog.cob:9: error: length of 'X' out of bounds: 5, maximum: 4
-])
-
 AT_CHECK([$COMPILE prog2.cob], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog2], [1], [],
 [libcob: prog2.cob:9: error: length of 'X' out of bounds: 5, maximum: 4
@@ -228,7 +228,7 @@ AT_CHECK([$COBCRUN_DIRECT ./prog2], [1], [],
 AT_CLEANUP
 
 
-AT_SETUP([Length overflow with offset])
+AT_SETUP([Length overflow with offset (1)])
 AT_KEYWORDS([refmod])
 
 AT_DATA([prog.cob], [
@@ -239,8 +239,7 @@ AT_DATA([prog.cob], [
        01 X             PIC X(4) VALUE "abcd".
        01 I             PIC 9 VALUE 3.
        PROCEDURE        DIVISION.
-           DISPLAY X(3:I) NO ADVANCING
-           END-DISPLAY.
+           DISPLAY X(3:I) NO ADVANCING.
            STOP RUN.
 ])
 
@@ -251,8 +250,68 @@ AT_CHECK([$COBCRUN_DIRECT ./prog], [1], [],
 
 AT_CLEANUP
 
-AT_SETUP([Test Reference Modification])
-AT_KEYWORDS([Numeric])
+
+AT_SETUP([Length overflow with offset (2)])
+AT_KEYWORDS([refmod IF])
+
+# verifies that the check is generated within conditions - simple IF
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       01 X             PIC X(4) VALUE "abcd".
+       01 I             PIC 9 VALUE 3.
+       PROCEDURE        DIVISION.
+           IF X(3:I) <> SPACES
+              DISPLAY X(3:I) NO ADVANCING.
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [1], [],
+[libcob: prog.cob:9: error: length of 'X' out of bounds: 3, starting at: 3, maximum: 4
+])
+
+AT_CLEANUP
+
+
+AT_SETUP([Length overflow with offset (3)])
+AT_KEYWORDS([refmod EVALUATE WHEN])
+
+# verifies that the check is generated within conditions - WHEN
+# complex test for correct place and not raised if guarded by check
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       01 X             PIC X(4) VALUE "abcd".
+       01 I             PIC 9 VALUE 3.
+       PROCEDURE        DIVISION.
+           EVALUATE TRUE
+           WHEN I < 2
+            AND X(3:I) <> SPACES
+              DISPLAY "1-" X(3:I) NO ADVANCING
+           WHEN I < 2
+           WHEN X(3:I) <> SPACES
+              DISPLAY "2-" X(3:I) NO ADVANCING
+           END-EVALUATE
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [1], [],
+[libcob: prog.cob:14: error: length of 'X' out of bounds: 3, starting at: 3, maximum: 4
+])
+
+AT_CLEANUP
+
+
+AT_SETUP([Reference Modification])
+AT_KEYWORDS([refmod numeric])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION DIVISION.
@@ -348,9 +407,10 @@ AT_DATA([prog.cob], [
            STOP RUN.
 ])
 
-AT_CHECK([cobc -x -std=mf -debug -Wall prog.cob ], [0], [], [])
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
 
-AT_CHECK([./prog], [1], [MOVEs to TSTTAIL3 (2:8)
+AT_CHECK([$COBCRUN_DIRECT ./prog], [1],
+[MOVEs to TSTTAIL3 (2:8)
 SPACES : xx        x
 ALL ' ': xx        x
 '  '   : xx        x
@@ -373,97 +433,8 @@ TSTXX is 75 vs 75
 TSTBIN is 03
 TSTXX is 04 vs 04
 TSTBIN10 is 825373492 vs '1234'
-], [libcob: prog.cob:91: error: length of 'TSTTAIL3' out of bounds: 12, maximum: 10
-])
-
-AT_CLEANUP
-
-AT_SETUP([Offset Overflow])
-AT_KEYWORDS([refmod])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION DIVISION.
-       PROGRAM-ID. prog.
-       DATA DIVISION.
-       WORKING-STORAGE SECTION.
-       01  G.
-           05  X   PIC X(4) VALUE "Abcd".  
-           05  I   PIC 9    VALUE 5.
-       PROCEDURE DIVISION.
-           DISPLAY "Test data: '" G "'"
-           DISPLAY "Reference out of bounds: '" X(I:1) "'"
-           STOP RUN.
-     
-])
-
-AT_CHECK([$COMPILE -std=cobol2014 -debug prog.cob ], [0], [], [])
-
-AT_CHECK([$COBCRUN_DIRECT ./prog], [1], [Test data: 'Abcd5'
-], [libcob: prog.cob:11: error: offset of 'X' out of bounds: 5, maximum: 4
-])
-
-AT_CLEANUP
-
-
-AT_SETUP([Offset Overflow])
-AT_KEYWORDS([refmod])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION DIVISION.
-       PROGRAM-ID. prog.
-       DATA DIVISION.
-       WORKING-STORAGE SECTION.
-       01  G.
-           05  X   PIC X(4) VALUE "Abcd".  
-           05  I   PIC 9    VALUE 4.
-       PROCEDURE DIVISION.
-           DISPLAY "Test data: '" G "'"
-           IF  I >= 1
-           AND I <= 4
-           AND X(I:1) <> SPACE
-               DISPLAY "Test one : True"
-           ELSE
-               DISPLAY "Test one : False"
-           END-IF.
-
-           IF  X(I:1) <> SPACE
-           AND I >= 1
-           AND I <= 4
-               DISPLAY "Test two : True"
-           ELSE
-               DISPLAY "Test two : False"
-           END-IF.
-
-           MOVE 5 TO I.
-           DISPLAY "Test data: '" G "'"
-           IF  I >= 1
-           AND I <= 4
-           AND X(I:1) <> SPACE
-               DISPLAY "Test one : Wrong"
-           ELSE
-               DISPLAY "Test one : OK"
-           END-IF.
-
-           IF  X(I:1) <> SPACE
-           AND I >= 1
-           AND I <= 4
-               DISPLAY "Test two : Wrong1"
-           ELSE
-               DISPLAY "Test two : Wrong2"
-           END-IF.
-           DISPLAY "Reference out of bounds: '" X(I:1) "'"
-           STOP RUN.
-     
-])
-
-AT_CHECK([$COMPILE -std=cobol2014 -debug prog.cob ], [0], [], [])
-
-AT_CHECK([$COBCRUN_DIRECT ./prog], [1], [Test data: 'Abcd4'
-Test one : True
-Test two : True
-Test data: 'Abcd5'
-Test one : OK
-], [libcob: prog.cob:37: error: offset of 'X' out of bounds: 5, maximum: 4
+],
+[libcob: prog.cob:91: error: length of 'TSTTAIL3' out of bounds: 12, maximum: 10
 ])
 
 AT_CLEANUP
