@@ -17,6 +17,9 @@ NEWS - user visible changes				-*- outline -*-
 
 * internal change: fileio splitted
 
+* runtime checks: previously conditions missed the generation of runtime checks,
+  leading to possible out-of-bounds or null-access there, this was fixed
+
 * The old OpenCOBOL EXTFH interface built in via --with-seqra-extfh 
 *     and --with-index-extfh is obsolete and will be removed in the
 *     next major release
